// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StatusItem should render an approved status with substatus and comments correctly 1`] = `
<div
  className="status-item"
>
  <div
    className="status-item-header"
  >
    <StatusPill
      status="Approved"
    />
    <StatusDate
      timestamp={1598573280}
    />
  </div>
  <div
    className="item-substatus-text"
  >
    Approval letter sent
  </div>
  <div
    className="status-item-text"
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque bibendum condimentum lorem consectetur eleifend.
  </div>
</div>
`;

exports[`StatusItem should render properly when no comment or substatus provided 1`] = `
<div
  className="status-item"
>
  <div
    className="status-item-header"
  >
    <StatusPill
      status="Approved"
    />
    <StatusDate
      timestamp={1598573280}
    />
  </div>
  <div
    className="status-item-text"
  />
</div>
`;

exports[`StatusItem should render properly when no comment provided 1`] = `
<div
  className="status-item"
>
  <div
    className="status-item-header"
  >
    <StatusPill
      status="Approved"
    />
    <StatusDate
      timestamp={1598573280}
    />
  </div>
  <div
    className="item-substatus-text"
  >
    Approval letter sent
  </div>
  <div
    className="status-item-text"
  />
</div>
`;

exports[`StatusItem should render properly when no substatus provided 1`] = `
<div
  className="status-item"
>
  <div
    className="status-item-header"
  >
    <StatusPill
      status="Approved"
    />
    <StatusDate
      timestamp={1598573280}
    />
  </div>
  <div
    className="item-substatus-text"
  >
    Approval letter sent
  </div>
  <div
    className="status-item-text"
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque bibendum condimentum lorem consectetur eleifend.
  </div>
</div>
`;

exports[`StatusItem should render properly with Appealed status 1`] = `
<div
  className="status-item"
>
  <div
    className="status-item-header"
  >
    <StatusPill
      status="Appealed"
    />
    <StatusDate
      timestamp={1598573280}
    />
  </div>
  <div
    className="status-item-text"
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque bibendum condimentum lorem consectetur eleifend.
  </div>
</div>
`;

exports[`StatusItem should render properly with Disqualified status 1`] = `
<div
  className="status-item"
>
  <div
    className="status-item-header"
  >
    <StatusPill
      status="Disqualified"
    />
    <StatusDate
      timestamp={1598573280}
    />
  </div>
  <div
    className="status-item-text"
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque bibendum condimentum lorem consectetur eleifend.
  </div>
</div>
`;

exports[`StatusItem should render properly with Lease Signed status 1`] = `
<div
  className="status-item"
>
  <div
    className="status-item-header"
  >
    <StatusPill
      status="Lease Signed"
    />
    <StatusDate
      timestamp={1598573280}
    />
  </div>
  <div
    className="status-item-text"
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque bibendum condimentum lorem consectetur eleifend.
  </div>
</div>
`;

exports[`StatusItem should render properly with Processing status 1`] = `
<div
  className="status-item"
>
  <div
    className="status-item-header"
  >
    <StatusPill
      status="Processing"
    />
    <StatusDate
      timestamp={1598573280}
    />
  </div>
  <div
    className="status-item-text"
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque bibendum condimentum lorem consectetur eleifend.
  </div>
</div>
`;

exports[`StatusItem should render properly with withdrawn status 1`] = `
<div
  className="status-item"
>
  <div
    className="status-item-header"
  >
    <StatusPill
      status="Withdrawn"
    />
    <StatusDate
      timestamp={1598573280}
    />
  </div>
  <div
    className="status-item-text"
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque bibendum condimentum lorem consectetur eleifend.
  </div>
</div>
`;
